syntax ="proto3";

package pb;

option go_package = ".";

service Coordinator {
    rpc CoordinatorSignupRequest(CoordinatorSignup)returns(CoordinatorSignupResponce);
    rpc CoordinatorSignupVerifyRequest(CoordinatorVerify)returns(CoordinatorVerifyResponce);
    rpc CoordinatorLoginRequest(CoordinatorLogin)returns(CoordinatorLoginResponce);
    rpc CoordinatorAddPackage(AddPackage)returns(AddPackageResponce);
    rpc CoordinatorAddDestination(AddDestination)returns(AddDestinationResponce);
    rpc CoordinatorAddActivity(AddActivity)returns(AddActivityResponce);
    rpc CoordinatorViewPackage(CoodinatorViewPackage)returns(Package);
    rpc CoordinatorViewDestination(CoodinatorViewDestination)returns(Destination);
    rpc CoordinatorViewActivity(ViewActivity)returns(Activity);
}

message ViewActivity{
    int64 ActivityId = 1;
}

message CoodinatorViewDestination{
    int64 DestinationId = 2;
}

message Activity{
    int64 activityId = 1;
    string activityname = 2;
    string description = 3;
    string Location = 4;
    string ActivityType = 5;
    int64 Amount = 6;
    string date = 7;
    string time = 8;
}

message Destination{
    int64 destinationId = 1;
    string DestinationName = 2;
    string Description = 3;
    int64 minprice = 4;
    int64 maxCapacity = 5;
    string image = 6;
    repeated Activity activity = 7;
}

message CoodinatorViewPackage{
    int64 packageId = 1;
}

message CoordinatorLogin{
    string email = 1;
    string password = 2;
    string role = 3;
}


message CoordinatorVerifyResponce{
    string status = 1;
    string message = 2;
}

message CoordinatorVerify{
    int32 OTP =1;
    string email = 2;
}

message CoordinatorSignupResponce{
    string status = 1;
    string message = 2;
}


message CoordinatorSignup{
    string name =1;
    string email = 2;
    string phone = 3;
    string password = 4;
    string role = 5;
}

message AddActivity{
    int64  destinationId = 1;
    string ActivityName = 2;
    string description = 3;
    string location = 4;
    string activitytype = 5;
    int64  amount = 6;
    string date = 7;
    string time = 8;
}

message AddActivityResponce{
    string status = 1;
}

message AddDestination{
    string destinationName = 1;
    string Description = 2;
    int64 PackageId = 3;
    int64 minprice = 4;
    string image = 5;
    int64 MaxCapacity = 6;
}

message AddDestinationResponce{
    string status = 1;
}

message AddPackage{
    string packagename = 1;
    string Coorinatoremail = 2;
    string startdate = 3;
    string startlocation = 4;
    string enddate = 5;
    string endlocation = 6;
    int64  price = 7;
    string image = 8;
    int64  destinationCount = 9;
    string Destination = 10;
    int64 categoryId = 11; 
    string description = 12;
    int64 MaxCapacity = 13;
    int64 CoorinatorId = 14;
}

message AddPackageResponce{
    string status = 1;
}

message Category{
    string categoryName = 1;
}

message Destinations{
    string DestinationName = 1;
    string Description = 2;
    int64 PackageID = 3;
    int64 MinPrice = 4;
    int64 MaxCapacity = 5;
    string Image = 6;
    int32 DestinationId = 7;
}

message Package{
    string name = 1;
    string startlocation = 2;
    string endlocation = 3;
    string startdatetime = 4;
    string enddatetime = 5;
    int32  price = 6;
    string image = 7;
    int32  destinationCount = 8;
    string destination = 9;
    int64  PackageId = 10;
    string Description = 11;
    Category category = 12;
    repeated Destinations Destinations = 13;
}

message CoordinatorLoginResponce{
    repeated Package Packages = 1;
    string            token = 2;
}